# xrune

./: CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  docs.yml
crates/ds_parser/: Cargo.toml
crates/ds_parser/src/: lib.rs  tests.rs
crates/ds_parser/src/ds_node/: ds_context.rs  ds_custom_token.rs  ds_if.rs  ds_iter.rs  ds_node.rs  ds_root.rs  ds_widget.rs  mod.rs  node_enum.rs
crates/ds_parser/src/ds_rune/: mod.rs  traverse.rs
crates/ds_parser/src/proc_macros_inner/src/: lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
crates/xrune/: Cargo.toml
crates/xrune/src/: default_rune.rs  lib.rs
crates/xrune_fmt/: Cargo.toml
crates/xrune_fmt/src/: formatter.rs  main.rs
crates/xrune_incant/: Cargo.toml
crates/xrune_incant/src/: lib.rs
crates/xrune_nexus/: Cargo.toml
crates/xrune_nexus/src/: lib.rs  tests.rs
crates/xrune_nexus/src/ds_node/: ds_attr.rs  ds_context.rs  ds_custom_token.rs  ds_if.rs  ds_iter.rs  ds_match.rs  ds_niche.rs  ds_on.rs  ds_root.rs  ds_widget.rs  mod.rs  node_enum.rs  reactive.rs
crates/xrune_nexus/src/ds_rune/: decipher.rs  mod.rs
crates/xrune_sigil/: Cargo.toml
crates/xrune_sigil/src/: lib.rs
crates/xwrapup/: Cargo.toml
crates/xwrapup/src/: lib.rs  xwrapup_rune.rs
crates/xwrapup_derive/: Cargo.toml
crates/xwrapup_macros/: Cargo.toml
crates/xwrapup_macros/src/: lib.rs
crates/xwrapup_parser/: Cargo.toml
crates/xwrapup_parser/src/: lib.rs
crates/xwrapup_parser/src/ds_node/: ds_context.rs  ds_if.rs  ds_widget.rs  mod.rs  node_enum.rs
crates/xwrapup_rs_macro/: Cargo.toml
crates/xwrapup_rs_macro/src/: lib.rs  xwrapup_rune.rs
docs/: book.toml
docs/landing/: 404.html  index.html  landing.css  ritual.css  ritual.js  runes-bg.js
docs/src/: 404.md  SUMMARY.md  binding.md  codex.md  comparisons.md  first-incantation.md  lexicon.md  preface.md  runes.md  scribe.md  workshop.md
docs/src-zh-CN/: 404.md  SUMMARY.md  binding.md  codex.md  comparisons.md  first-incantation.md  lexicon.md  preface.md  runes.md  scribe.md  workshop.md
docs/src-zh-CN/casting-syntax/: context.md  control.md  enchants.md  errors.md  index.md  on.md  widget.md
docs/src/casting-syntax/: context.md  control.md  enchants.md  errors.md  index.md  on.md  widget.md
docs/test/: Cargo.toml  extract.py
docs/theme/: head.hbs
docs/theme/css/: general.css  variables.css
docs/theme/fonts/: fonts.css
examples/example0/: Cargo.toml
examples/example0/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
