[workspace]
members = [
    "crates/*",
    "examples/*",
    "xtask",
]

default-members = [
    "crates/*",
]

resolver = "2"

[workspace.package]
version = "1.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/W-Mai/xrune"

[workspace.dependencies]
xrune-sigil = { path = "crates/xrune_sigil", version = "=1.3.1" }
xrune-nexus = { path = "crates/xrune_nexus", version = "=1.3.1" }
xrune-incant = { path = "crates/xrune_incant", version = "=1.3.1" }
xrune = { path = "crates/xrune", version = "=1.3.1" }
