[package]
name = "xrune"
version = "1.1.0"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
repository = "https://github.com/W-Mai/xrune"
keywords = ["dsl", "ui", "declarative", "proc-macro", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]
edition = "2018"

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

xrune-nexus = { path = "../xrune_nexus", version = "1.1.0" }
xrune-incant = { path = "../xrune_incant", version = "1.1.0" }
