[package]
name = "xrune"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Benign X <1341398182@qq.com>"]
description = "Declarative UI DSL framework with pluggable codegen backends"
keywords = ["dsl", "ui", "declarative", "proc-macro", "codegen"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2" }
xrune-nexus = { workspace = true }
xrune-incant = { workspace = true }
