[package]
name = "xrune-fmt"
version = "0.1.0"
edition = "2024"
description = "Formatter for xrune DSL ui! macros"
license = "MIT"

[[bin]]
name = "xrune-fmt"
path = "src/main.rs"

[dependencies]
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
xrune-nexus = { path = "../xrune_nexus" }
