[package]
name = "xrune-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Formatter for xrune DSL ui! macros"

[[bin]]
name = "xrune-fmt"
path = "src/main.rs"

[dependencies]
regex = "1"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2"
xrune-nexus = { workspace = true }
