[package]
name = "xrune-incant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Benign X <1341398182@qq.com>"]
description = "Proc macro entry point for the xrune declarative DSL framework"
keywords = ["proc-macro", "dsl", "ui", "declarative", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2" }
xrune-nexus = { workspace = true }
