[package]
name = "xrune-nexus"
version = "1.3.0"
authors = ["Benign X <1341398182@qq.com>"]
description = "Core AST, DsRune trait, and decipher engine for the xrune DSL framework"
license = "MIT"
repository = "https://github.com/W-Mai/xrune"
keywords = ["dsl", "ast", "parser", "codegen", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

# self dependence
xrune-sigil = { path = "../xrune_sigil", version = "1.1.2" }
