[package]
name = "xrune-nexus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Benign X <1341398182@qq.com>"]
description = "Core AST, DsRune trait, and decipher engine for the xrune DSL framework"
keywords = ["dsl", "ast", "parser", "codegen", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2" }
xrune-sigil = { workspace = true }
