[package]
name = "xrune-sigil"
version = "1.1.3"
authors = ["Benign X <1341398182@qq.com>"]
description = "Derive macro for reference-counted AST nodes — part of the xrune DSL framework"
license = "MIT"
repository = "https://github.com/W-Mai/xrune"
keywords = ["proc-macro", "derive", "dsl", "ast"]
categories = ["development-tools::procedural-macro-helpers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }
