[package]
name = "xrune-sigil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Benign X <1341398182@qq.com>"]
description = "Derive macro for reference-counted AST nodes — part of the xrune DSL framework"
keywords = ["proc-macro", "derive", "dsl", "ast"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2" }
