[package]
name = "xwrapup"
version = "1.1.0"
authors = ["W-Mai <1341398182@qq.com>"]
description = "xWrapup Rust Macro"
license = "MIT"
repository = "https://github.com/W-Mai/xwrapup_rs_macro"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

xwrapup-parser = { path = "../xwrapup_parser", version = "1.1.0" }
xwrapup-macros = { path = "../xwrapup_macros", version = "1.1.0" }
