[package]
name = "xwrapup-parser"
version = "1.1.0"
license = "MIT"
repository = "https://github.com/W-Mai/xwrapup_rs_macro"
description = "xwrapup DSL framework"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.64"
syn = { version = "2.0.25" }

# self dependence
xwrapup-derive = { path = "../xwrapup_derive", version = "1.1.0" }
